Closed Bug 1099446 Opened 10 years ago Closed 10 years ago

[jsdbg2] Rekey missingScopes when replacing frame guts for debug mode OSR

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: shu, Assigned: shu)

References

Details

Attachments

(1 file)

In debug mode OSR, turning on debug mode with an Ion frame on the stack invalidates that frame and forces it to bail to Baseline. To maintain the Debugger.Frame <-> actual underlying frame bijection, we forward Debugger.Frame objects via Debugger::replaceFrameGuts when the Ion->Baseline bail actually happens.

We currently don't do this forwarding for Debugger.Environments, which may be keyed off the frame in DebugScopes::missingScopes.
Blocks: 1098696
Assignee: nobody → shu
Attachment #8523291 - Flags: review?(luke) → review+
https://hg.mozilla.org/mozilla-central/rev/759f7dc1dd22
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.