Bug 1099446 - Rekey DebugScopes::missingScopes on debug mode OSR. (r=luke)